--- a/static_app/www/index.html
+++ b/static_app/www/index.html
@@ -1,105 +1,106 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>osakana0000.info</title>
-</head>
-<body class="bg-gray-700">
-<section class="text-gray-400 body-font">
-    <div class="container px-5 py-20 mx-auto">
-        <div class="rounded-lg bg-gray-600 py-10 flex flex-wrap w-full mb-20 flex-col items-center text-center">
-            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">osakana0000.info</h1>
-            <p class="lg:w-1/2 w-full leading-relaxed text-opacity-80">Various things I made</p>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+JP&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+    <style>
+      body {
+        font-family: "Lobster", cursive;
+        font-family: "Noto Sans JP", sans-serif;
+        /* background-color: #44617b; */
+        background-color: #3d5e87;
+      }
+      #github,
+      .btn,
+      .content {
+        background-color: #ffffff18;
+        color: #dfd7d7;
+      }
+      a {
+        color: #dfd7d7;
+        text-decoration: none;
+      }
+    </style>
+    <title>osakana0000.site</title>
+  </head>
+  <body>
+    <div class="container my-3">
+      <div class="row px-3">
+        <div class="col-md-8 offset-md-2 content rounded shadow">
+          <nav class="navbar navbar-light p-2" id="navbar">
+            <a class="navbar-brand" href="/" style="color: #dfd7d7"
+              ><h3><i class="bi bi-code-slash me-2"></i>osakana0000.site</h3></a
+            >
+            <span class="navbar-text" style="color: #dfd7d7; font-size: large">My Sample Programs</span>
+          </nav>
         </div>
-        <div class="flex flex-wrap -m-4">
-            <div class="xl:w-1/3 md:w-1/2 p-4">
-                <div class="border-opacity-75 p-6 rounded-lg bg-gray-800">
-                    <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-gray-800 text-indigo-400 mb-4">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                             stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                            <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-lg text-white font-medium title-font mb-2"><a href="t-r-app/">タスク・リソース管理App</a>
-                    </h2>
-                    <p class="leading-relaxed text-base">複数チームのTodoを管理</p>
-                </div>
-            </div>
-            <div class="xl:w-1/3 md:w-1/2 p-4">
-                <!-- <div class="border border-gray-800 border-opacity-75 p-6 rounded-lg"> -->
-                <div class="border-opacity-75 p-6 rounded-lg bg-gray-800">
-                    <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-gray-800 text-indigo-400 mb-4">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                             stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                            <circle cx="6" cy="6" r="3"></circle>
-                            <circle cx="6" cy="18" r="3"></circle>
-                            <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-lg text-white font-medium title-font mb-2"><a href="janken-js/">Janken-Js</a></h2>
-                    <p class="leading-relaxed text-base">CPUとじゃんけん！</p>
-                </div>
-            </div>
-            <div class="xl:w-1/3 md:w-1/2 p-4">
-                <div class="border-opacity-75 p-6 rounded-lg bg-gray-800">
-                    <!-- <div class="border border-gray-800 border-opacity-75 p-6 rounded-lg"> -->
-                    <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-gray-800 text-indigo-400 mb-4">
-                        <svg fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"
-                             stroke-width="2" class="w-6 h-6" viewbox="0 0 24 24">
-                            <path d="m20 21v-2a4 4 0 00-4-4h8a4 4 0 00-4 4v2"></path>
-                            <circle cx="12" cy="7" r="4"></circle>
-                        </svg>
-                    </div>
-                    <h2 class="text-lg text-white font-medium title-font mb-2">my room condition（工事中）</h2>
-                    <p class="leading-relaxed text-base">raspberry pi zeroから取得した温度・湿度・気圧</p>
-                </div>
-            </div>
-            <div class="xl:w-1/3 md:w-1/2 p-4">
-                <div class="border-opacity-75 p-6 rounded-lg bg-gray-800">
-                    <!-- <div class="border border-gray-800 border-opacity-75 p-6 rounded-lg"> -->
-                    <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-gray-800 text-indigo-400 mb-4">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                             stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                            <path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1zM4 22v-7"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-lg text-white font-medium title-font mb-2">Python Sample Programs（工事中）</h2>
-                    <p class="leading-relaxed text-base">工事中</p>
-                </div>
-            </div>
-            <div class="xl:w-1/3 md:w-1/2 p-4">
-                <!-- <div class="border border-gray-800 border-opacity-75 p-6 rounded-lg"> -->
-                <div class="border-opacity-75 p-6 rounded-lg bg-gray-800">
-                    <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-gray-800 text-indigo-400 mb-4">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                             stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                            <path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1zM4 22v-7"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-lg text-white font-medium title-font mb-2">JavaScript Sample Programs（工事中）</h2>
-                    <p class="leading-relaxed text-base">工事中</p>
-                </div>
-            </div>
-            <div class="xl:w-1/3 md:w-1/2 p-4">
-                <!-- <div class="border border-gray-800 border-opacity-75 p-6 rounded-lg"> -->
-                <div class="border-opacity-75 p-6 rounded-lg bg-gray-800">
-                    <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-gray-800 text-indigo-400 mb-4">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                             stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                            <path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1zM4 22v-7"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-lg text-white font-medium title-font mb-2">Java Sample Program（工事中）</h2>
-                    <p class="leading-relaxed text-base">工事中</p>
-                </div>
-            </div>
-            <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
-                <a href="https://github.com/osakana0000">GitHub</a>
-            </button>
+      </div>
+      <div class="row my-1 px-1">
+        <div class="col-md-4 offset-md-2 p-2">
+          <a href="t-r-app/">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-app-indicator me-2"></i>タスクリソース管理App</h4>
+              <p>複数チームのTodoを管理</p>
+            </div></a
+          >
         </div>
+        <div class="col-md-4 p-2">
+          <a href="janken-js/">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-controller me-2"></i>janken-js</h4>
+              <p>CPUとじゃんけん！</p>
+            </div></a
+          >
+        </div>
+        <div class="col-md-4 offset-md-2 p-2 p-2">
+          <a href="my-room-condition/">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-thermometer-half me-2"></i>My Room Condition</h4>
+              <p>Raspberry Piから取得した部屋の温度など</p>
+            </div></a
+          >
+        </div>
+        <div class="col-md-4 p-2">
+          <a href="https://github.com/osakana0000/practice-python">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-filetype-py me-2"></i>Python Samples</h4>
+              <p>My .py files (GitHub)</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 offset-md-2 p-2">
+          <a href="https://github.com/osakana0000/practice-javascript">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-filetype-js me-2"></i>JavaScript Samples</h4>
+              <p>My .js files (GitHub)</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 p-2">
+          <a href="https://github.com/osakana0000/practice-java">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-filetype-java me-2"></i>Java Samples</h4>
+              <p>My .java files (GitHub)</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-8 offset-md-2 p-2">
+          <div class="shadow rounded p-2 content text-center">
+            <h4><i class="bi bi-pc me-2"></i>Structure</h4>
+            <img src="index.svg" class="p-3 img-fluid rounded mx-auto d-block" />
+          </div>
+        </div>
+        <div class="col offset-md-2 p-2">
+          <a class="btn btn-block shadow p-3 me-3" role="button" href="https://github.com/osakana0000"><i class="bi bi-github me-1"></i>GitHub</a>
+          <a class="btn btn-block shadow p-3" role="button" href="/"><i class="bi bi-globe-asia-australia me-1"></i>TOP</a>
+        </div>
+      </div>
     </div>
-</section>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </body>
 </html>
