add my-room-condition and fix html of top

--- a/2index.html
+++ b/2index.html
@@ -15,9 +15,6 @@
         /* background-color: #44617b; */
         background-color: #3d5e87;
       }
-      .title {
-        background-color: #ffffff00;
-      }
       #github,
       .btn,
       .content {
@@ -32,18 +29,18 @@
     <title>osakana0000.site</title>
   </head>
   <body>
-    <div class="container shadow my-3 pt-2">
-      <div class="row shadow rounded mx-3">
-        <div class="col offset-md-0 pt-3 title">
-          <nav class="navbar navbar-light pb-3" id="navbar">
+    <div class="container my-3">
+      <div class="row px-3">
+        <div class="col-md-8 offset-md-2 content rounded shadow">
+          <nav class="navbar navbar-light p-2" id="navbar">
             <a class="navbar-brand" href="/" style="color: #dfd7d7"
               ><h3><i class="bi bi-code-slash me-2"></i>osakana0000.site</h3></a
             >
-            <span class="navbar-text" style="color: #dfd7d7; font-size: large">My Samples</span>
+            <span class="navbar-text" style="color: #dfd7d7; font-size: large">My Sample Programs</span>
           </nav>
         </div>
       </div>
-      <div class="row my-1 px-1 mx-1">
+      <div class="row my-1 px-1">
         <div class="col-md-4 offset-md-2 p-2">
           <a href="t-r-app/">
             <div class="content shadow rounded p-4 text-center btn w-100">
@@ -71,21 +68,36 @@
         <div class="col-md-4 p-2">
           <a href="https://github.com/osakana0000/practice-python">
             <div class="content shadow rounded p-4 text-center btn w-100">
-              <h4><i class="bi bi-github me-2"></i>GitHub</h4>
-              <p>My Sample Programs</p>
+              <h4><i class="bi bi-filetype-py me-2"></i>Python Samples</h4>
+              <p>My .py files (GitHub)</p>
             </div>
           </a>
         </div>
-
+        <div class="col-md-4 offset-md-2 p-2">
+          <a href="https://github.com/osakana0000/practice-javascript">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-filetype-js me-2"></i>JavaScript Samples</h4>
+              <p>My .js files (GitHub)</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 p-2">
+          <a href="https://github.com/osakana0000/practice-java">
+            <div class="content shadow rounded p-4 text-center btn w-100">
+              <h4><i class="bi bi-filetype-java me-2"></i>Java Samples</h4>
+              <p>My .java files (GitHub)</p>
+            </div>
+          </a>
+        </div>
         <div class="col-md-8 offset-md-2 p-2">
-          <div class="shadow rounded p-2 text-center" style="color: #dfd7d7">
+          <div class="shadow rounded p-2 content text-center">
             <h4><i class="bi bi-pc me-2"></i>Structure</h4>
             <img src="index.svg" class="p-3 img-fluid rounded mx-auto d-block" />
           </div>
         </div>
-
-        <div class="row my-1 pt-2 pb-3 mx-1 justify-content-center">
-          <a class="col-3 btn btn-block shadow p-3" role="button" href="/"><i class="bi bi-globe-asia-australia me-1"></i>TOP</a>
+        <div class="col offset-md-2 p-2">
+          <a class="btn btn-block shadow p-3 me-3" role="button" href="https://github.com/osakana0000"><i class="bi bi-github me-1"></i>GitHub</a>
+          <a class="btn btn-block shadow p-3" role="button" href="/"><i class="bi bi-globe-asia-australia me-1"></i>TOP</a>
         </div>
       </div>
     </div>
